--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -10,8 +10,6 @@
 
 <h2 id="who-can-apply">Who can apply</h2>
 
-
-
 <p>You can apply if you:</p>
 <ul>
   <li>are in England</li>
@@ -21,7 +19,20 @@
 </ul>
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
+<h3 class="govuk-heading-s">Slurry treatment equipment</h3>
+  <p>The grant can pay up to 40% of the costs for:</p>
+    <ul>
+      <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump)</li>
+      <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
+    </ul>
 
+<h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
+  <p>The grant can pay up to 40% of the costs for:</p>
+    <ul>
+      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, advanced ventilation controls)</li>
+      <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
+      <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
+    </ul>
 
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
 <p>If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
@@ -87,6 +98,7 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Improving Farm Productivity grant manual</a> before you submit an application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
