--- a/app/views/robotics/current/guidance.html
+++ b/app/views/robotics/current/guidance.html
@@ -100,6 +100,7 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Improving Farm Productivity grant manual</a> before you submit an application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
