--- a/app/views/robotics/current/introducing-innovation.html
+++ b/app/views/robotics/current/introducing-innovation.html
@@ -24,7 +24,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-                Are you using this technology on your farm?
+                Are you already using this technology?
             </h1>
           </legend>
 
