--- a/app/views/robotics/current/wider-farming.html
+++ b/app/views/robotics/current/wider-farming.html
@@ -25,7 +25,7 @@ Have you already started work on the project?
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
-            Will your project use data analytics to improve productivity on the farm?  
+            Will your project use data analytics to improve productivity?  
           </h1>
         </legend>
         <div id="wider-farming" class="govuk-hint">
