--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -20,20 +20,17 @@
 </ul>
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
-
-
-
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump) </li>
+      <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump)</li>
       <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
     </ul>
 
 <h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
+      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, advanced ventilation controls)</li>
       <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
       <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
     </ul>
@@ -102,9 +99,11 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Improving Farm Productivity grant manual</a> before you submit an application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
 <br/>
+
 
 {% endblock %}
