--- a/app/views/slurry/current/tenancy.html
+++ b/app/views/slurry/current/tenancy.html
@@ -21,7 +21,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">Is the planned project on land the farm business owns?</h1>
+<h1 class="govuk-heading-l">Is the planned project on land business owns?</h1>
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
