--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -14,7 +14,8 @@
 <p>You can apply if you:</p>
 <ul>
   <li>are in England</li>
-  <li>own the land the project will be on or have a tenancy for at least 5 years</li>
+  <li>are a farmer who owns the land the project will be on (or have a tenancy for at least 5 years)</li>
+  <li>are an agricultural contractor who owns the land the equipment will be stored on (or have a tenancy for at least 5 years)</li>
   <li>estimate the project costs are over £87,500</li>
 
 </ul>
@@ -30,7 +31,7 @@
 <h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, advanced ventilation controls)</li>
+      <li>robotic or innovative horticulture and arable equipment (for example, robotic weeding, advanced ventilation controls)</li>
       <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
       <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
     </ul>
@@ -64,7 +65,7 @@
 
 
 
-<p>Any planning permission must be in place to submit a full application.</p>
+<p>You must have applied for planning permission before you submit a full application. Any planning permission must be in place by 31 December 2022.</p>
 <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
 <p>Before you start the project, you can:</p>
 
