--- a/app/views/slurry/current/start.html
+++ b/app/views/slurry/current/start.html
@@ -40,7 +40,8 @@
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>are in England</li>
-            <li>own the land the project will be on or have a tenancy for at least 5 years</li>
+            <li>are a farmer who owns the land the project will be on (or have a tenancy for at least 5 years)</li>
+            <li>are an agricultural contractor who owns the land the equipment will be stored on (or have a tenancy for at least 5 years)</li>
             <li>estimate the project costs are over £87,500</li>
           </ul>
         </div>
