--- a/app/views/slurry/current/tenancy-length.html
+++ b/app/views/slurry/current/tenancy-length.html
@@ -24,8 +24,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Is the planned project on land with a tenancy agreement in place until 2027 or after?
-
+                Do you have a tenancy agreement until 2027 or after?
               </h1>
             </legend>
             <br>
