--- a/app/views/addingvalue/current/tenancy.html
+++ b/app/views/addingvalue/current/tenancy.html
@@ -37,6 +37,9 @@
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
+                  hint: {
+                    text: "The land where the work will happen or the equipment will be stored"
+                },
 
                   items: [
                 {
