--- a/app/views/robotics/current/country.html
+++ b/app/views/robotics/current/country.html
@@ -41,7 +41,7 @@
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-country-postcode">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="conditional-country-postcode">
-                    What is the site postcode?
+                    Where will the work happen or the equipment be stored?
                   </label>
                   <label class="govuk-label" for="postcode">Postcode</label>
                   <input class="govuk-input govuk-!-width-one-third" id="postcode" name="postcode" type="text" value="{{ data['postcode'] }}" spellcheck="false" {{ checked("postcode", "postcode") }}>
