--- a/app/views/slurry/current/tenancy.html
+++ b/app/views/slurry/current/tenancy.html
@@ -21,7 +21,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">Is the planned project on land business owns?</h1>
+<h1 class="govuk-heading-l">Is the planned project on land the business owns?</h1>
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
@@ -36,7 +36,9 @@
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    text: "The land where the work will happen or the equipment will be stored"
+                },
                   items: [
                 {
                   value: "Yes",
