--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -1,5 +1,5 @@
 
-{% extends "./views/layouts/GUIDANCEADDINGVALUE.html" %}
+{% extends "./views/layouts/GUIDANCEROBOTICS.html" %}
 
 
 {% block guidance %}
@@ -10,14 +10,15 @@
 
 <h2 id="who-can-apply">Who can apply</h2>
 
+
+
 <p>You can apply if you:</p>
 <ul>
-  <li>are in England</li>
-  <li>are a farmer who owns the land the project will be on (or have a tenancy for at least 5 years)</li>
-  <li>are an agricultural contractor who owns the land the equipment will be stored on (or have a tenancy for at least 5 years)</li>
-  <li>estimate the project costs are over £87,500</li>
-
+  <li>are a farmer or agricultural contractor whose business is registered in England </li>
+  <li>will do the grant-funded work in England </li>
+  <li>estimate the project costs are over £87,500 </li>
 </ul>
+<p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
