--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -19,119 +19,127 @@
 
 {% block content %}
 
-<form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-    <div class="govuk-form-group">
-      <div class="govuk-grid-column-two-thirds">
-      <fieldset class="govuk-fieldset" aria-describedby="projectItems-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">
-            What eligible items does your project need?
-          </h1>
-        </legend>
-        <span id="projectItems-hint" class="govuk-hint">
-         Select all the items your project needs
-        </span>
-        <div class="govuk-checkboxes">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-    <!-- Section 1 -->
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
 
-    <section>
-          <div role="dialog" aria-labelledby="Non-robotic equipment" class="govuk-checkboxes__divider">
-            <h2 class="govuk-heading-s" id="Non-robotic equipment">
-                Non-robotic equipment
-            </h2>
-          </div>
 
+
+            <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <h1 class="govuk-fieldset__heading">
+          What eligible items does your project need?
+        </h1>
+      </legend>
+      <div id="project-items-hint" class="govuk-hint">
+    </div>
+
+<p class="govuk-hint">Select all the items your project needs</p>
+
+<h3 class="govuk-heading-s">Non-robotic equipment</h3>
+  <div class="govuk-checkboxes">
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" aria-describedby="advanced-ventilation-control-units-hint" value="Advanced ventilation control units" {{ checked("robotic-equipment", "Advanced ventilation control units") }}>
+      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Advanced ventilation control units" {{ checked("robotic-equipment", "Advanced ventilation control units") }}>
       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
         Advanced ventilation control units
       </label>
       <div id="advanced-ventilation-control-units-hint" class="govuk-hint govuk-radios__hint">
-        System to control ventilation of existing horticultural and livestock buildings to reduce greenhouse gas emissions
-      </div>
+          System to control and monitor ventilation of existing horticultural or livestock buildings to minimise heat loss and reduce greenhouse gas and particulate emissions
+        </div>
     </div>
-
-    <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" aria-describedby="wavelength-specific-LED-lighting-hint" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment", "Wavelength-specific LED lighting") }}>
+    <div class="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment", "Wavelength-specific LED lighting") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Wavelength-specific LED lighting
+          Wavelength-specific LED lighting for horticultural crops
         </label>
-      <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
-        Wavelength-specific LED lighting to help crop growth, pest control and animal welfare
+        <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
+              Wavelength-specific LED lighting to aid plant growth
+            </div>
       </div>
     </div>
+  </fieldset>
+  </div>
 
-  <br><br>
-
-  </section>
-  <section>
-    <!-- Section 2 -->
-    <div class="govuk-radios__divider"><strong>Robotic equipment</div>
-    <span id="roboticEquipment-hint" class="govuk-hint">
-     Autonomous farming equipment capable of sensing its environment, making decisions and performing actions
-    </span>
-
-    <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Robotic or autonomous harvesting equipment" {{ checked("robotic-equipment", "Robotic or autonomous harvesting equipment") }}>
-      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-        Robotic or autonomous harvesting equipment
-      </label>
+<h3 class="govuk-heading-s">Robotic equipment</h3>
+<div id="robotic-equipment-hint" class="govuk-hint">
+      Autonomous farming equipment capable of sensing its environment, making decisions and performing actions
     </div>
-    <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Robotic weeding equipment" {{ checked("robotic-equipment", "Robotic weeding equipment") }}>
-      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
-        Robotic weeding equipment
-      </label>
-    </div>
-       <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment"  aria-describedby="roboticEquipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
-          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-            Voluntary robotic milking equipment
+
+<div class="govuk-checkboxes">
+  <div class="govuk-checkboxes__item">
+    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic or autonomous harvesting equipment" {{ checked("robotic-equipment", "Robotic or autonomous harvesting equipment") }}>
+    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
+      Robotic or autonomous harvesting equipment
+    </label>
+
+  </div>
+
+    <div class="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Robotic weeding equipment" {{ checked("robotic-equipment", "Robotic weeding equipment") }}>
+        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
+          Robotic weeding equipment
+        </label>
+      </div>
+      <div class="govuk-checkboxes">
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
+          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
+            Robotic spraying equipment
           </label>
         </div>
-         <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment"  aria-describedby="roboticEquipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
-            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-              Robotic spraying equipment
+        <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
+            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
+              Autonomous driverless tractor
             </label>
           </div>
-
+      <div class="govuk-checkboxes">
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
+          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
+            Voluntary robotic milking system
+          </label>
+        </div>
+        <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
+            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
+              Robotic feeding system
+            </label>
+          </div>
+          <div class="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Robotic transplanting" {{ checked("robotic-equipment", "Robotic transplanting") }}>
+              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic transplanting" {{ checked("robotic-equipment", "Robotic transplanting") }}>
               <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
                 Robotic transplanting
               </label>
             </div>
-
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-                  Robotic feeding systems
-                </label>
-              </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
-                      Robotic tractor
-                    </label>
-                  </div>
-
+            <div class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
-                      <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" aria-describedby="roboticEquipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
+                      <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
                       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
                         Other robotic equipment
                       </label>
                     </div>
-                    </section>
-                </div>
-              </fieldset>
-<br><br>
-<button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-</div>
-      </form>
 
+
+
+    </fieldset>
+  </div>
+
+<button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+      </form>
+    </div>
+  </div>
 
 
 {% endblock %}
