--- a/app/views/robotics/current/guidance.html
+++ b/app/views/robotics/current/guidance.html
@@ -17,9 +17,8 @@
   <li>are a farmer or agricultural contractor whose business is registered in England </li>
   <li>will do the grant-funded work in England </li>
   <li>estimate the project costs are over £87,500 </li>
-  
-
 </ul>
+<p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
