--- a/app/views/robotics/current/project-items.html
+++ b/app/views/robotics/current/project-items.html
@@ -49,17 +49,17 @@
         Advanced ventilation control units
       </label>
       <div id="advanced-ventilation-control-units-hint" class="govuk-hint govuk-radios__hint">
-          System to control ventilation of existing horticultural and livestock buildings to reduce greenhouse gas emissions
+          System to control and monitor ventilation of existing horticultural or livestock buildings to minimise heat loss and reduce greenhouse gas and particulate emissions
         </div>
     </div>
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment", "Wavelength-specific LED lighting") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Wavelength-specific LED lighting
+          Wavelength-specific LED lighting for horticultural crops
         </label>
         <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
-              Wavelength-specific LED lighting to help crop growth, pest control and animal welfare
+              Wavelength-specific LED lighting to aid plant growth
             </div>
       </div>
     </div>
@@ -89,16 +89,30 @@
       </div>
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
-          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-            Voluntary robotic milking equipment
+          <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
+          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
+            Robotic spraying equipment
           </label>
         </div>
         <div class="govuk-checkboxes">
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
-            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-              Robotic spraying equipment
+            <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
+            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
+              Autonomous driverless tractor
+            </label>
+          </div>
+      <div class="govuk-checkboxes">
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
+          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
+            Voluntary robotic milking system
+          </label>
+        </div>
+        <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
+            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
+              Robotic feeding system
             </label>
           </div>
           <div class="govuk-checkboxes">
@@ -109,21 +123,6 @@
               </label>
             </div>
             <div class="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-                  Robotic feeding systems
-                </label>
-              </div>
-
-                <div class="govuk-checkboxes">
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
-                      Robotic tractor
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
                       <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
                       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
