--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -44,6 +44,7 @@
             <li>will do the grant-funded work in England </li>
             <li>estimate the project costs are over £87,500 </li>
           </ul>
+          <p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
         </div>
 
         <p><div class="govuk-inset-text">
