--- a/app/views/addingvalue/current/other-robotic-equipment.html
+++ b/app/views/addingvalue/current/other-robotic-equipment.html
@@ -34,7 +34,7 @@
           <ul class="govuk-list govuk-list--bullet govuk-hint">
             <li>have a sensing system</li>
             <li>have a decision-making capability</li>
-            <li>use actuators</li>
+            <li>use actuators (the devices that move robot joints)</li>
           </ul>
         </p>
        </div>
@@ -49,7 +49,7 @@
             <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="250">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="label-as-page-heading">
-                  Enter your item, including the name, a brief description and the benefit
+                  Enter your item, including the name, a brief description and the benefit to your business
                 </label>
                 <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="other-robotic-item" rows="10" aria-describedby="word-count-info">{{ data['other-robotic-item'] }}</textarea>
               </div>
@@ -81,7 +81,7 @@
 
         <li>have a sensing system</li>
         <li>have a decision-making capability</li>
-        <li>use actuators</li>
+        <li>use actuators (the devices that move robot joints)</li>
       </ul>
 
   </div>
