--- a/app/views/addingvalue/current/other-robotic-fail2.html
+++ b/app/views/addingvalue/current/other-robotic-fail2.html
@@ -29,7 +29,7 @@
         <ul class="govuk-list govuk-list--bullet">
             <li>have a sensing system</li>
             <li>have a decision-making capability</li>
-            <li>use actuators</li>
+            <li>use actuators (the devices that move robot joints)</li>
             </ul>
 
 
