--- a/app/views/addingvalue/current/views/layouts/GUIDANCEROBOTICS.html
+++ b/app/views/addingvalue/current/views/layouts/GUIDANCEROBOTICS.html
@@ -12,12 +12,13 @@
 
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a prototype. It is not a real service.'
-}) }}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
 {% endblock %}
 
 {% block pageTitle %}
@@ -62,12 +63,12 @@ Farming Transformation Fund slurry acidification grant
       <p class="govuk-caption-xl">
         Guidance
       </p>
-      <h1 class="govuk-heading-xl">
-        Farming Investment Fund
+      <h1 class="gem-c-title__text gem-c-title__text--long">
+        Farming Transformation Fund Improving Farm Productivity Grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Information for farmers, foresters, growers and contractors about grants for investing in new technology and equipment, who is eligible and how to apply. </p>
+    <p class="gem-c-lead-paragraph">Get a grant for innovative farming equipment that increases productivity and improves the environment. </p>
 
   </div>
 </div>
@@ -78,7 +79,7 @@ Farming Transformation Fund slurry acidification grant
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
           Published 21 June 2021
-          <br>Last updated 29 July 2021
+          <br>Last updated 5 October 2021
           — <a href="#history">see all updates</a>
         </div>
 
@@ -112,7 +113,7 @@ Farming Transformation Fund slurry acidification grant
     <div class="responsive-bottom-margin">
       <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
         Published 21 June 2021
-        <br>Last updated 29 July 2021
+        <br>Last updated 5 October 2021
         <a href="#full-history" class="app-c-published-dates__toggle" data-controls="full-history" data-expanded="false" data-toggled-text="-&nbsp;hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all
           updates</a>
       </div>
