--- a/app/views/addingvalue/current/wider-farming.html
+++ b/app/views/addingvalue/current/wider-farming.html
@@ -25,11 +25,11 @@ Have you already started work on the project?
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
-            Will your project use data analytics to improve productivity on the farm?  
+            Will your project use data analytics to improve productivity?  
           </h1>
         </legend>
         <div id="wider-farming" class="govuk-hint">
-          Software automating data analysis to improve efficiency
+          Software automating data analysis to improve efficiency (for example, analysing white blood cell counts in dairy)
         </div>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
